# yantraHack

./: Weather1.js  docker-compose.yml  weather forecast.py  weather.html
backend/: dockerfile  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  schema.py
backend/app/models/: aep_model.json  aep_model.pkl  carbon_model.pkl  label_encoders.pkl
backend/static/: landcover.tif
frontend/: dockerfile  middleware.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/carbon/: page.tsx
frontend/app/loading/: page.tsx
frontend/app/test/: page.tsx
frontend/app/updates/: page.tsx
frontend/app/uzm/: page.tsx
frontend/app/weather/: page.tsx
frontend/app/welcome/: page.tsx
frontend/data/: globe.json
frontend/public/assets/: Login.webm  background.webm  earth-zoom.webm  video1.webm
